# devoauth2

./: .gitignore  README.md  pyproject.toml  requirements.txt
devoauth2/: main.py
devoauth2/data/: jwk_private.json  jwks.json
